# retarded_todo_list

./: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: deps.py
app/core/: config.py  logging_config.py  middleware.py  security.py
app/db/: base.py  session.py
app/db/migrations/: env.py
app/db/migrations/versions/: 188a7abab080_create_user.py  222e1db96051_fixed_title_in_task.py  30f753de9620_fixed_tables_user_and_tasks.py  3786cae2f3d5_fixed_title_in_task.py  3fb819f78ba0_updated_user.py  b5266ff5b85a_changed_name_to_username_in_table_user.py  be20d2d4856f_fixed_title_in_task.py  (+4 more)
app/handler/: router.py
app/handler/ping/: ping.py
app/handler/task/: create.py  createTaskWithUser.py  delete.py  getAllTasks.py  getTaskByCategory.py  getTaskById.py  getTaskByTitle.py  read.py  update.py
app/handler/user/: create.py  login.py
app/models/: product.py  task.py  user.py
app/repository/ping/: pingCheck.py
app/repository/task/: getAllTasks.py  getTaskByCategory.py  getTaskById.py  getTaskByTitle.py  taskCreate.py  taskCreateWithUser.py  taskDelete.py  taskRead.py  taskUpdate.py
app/repository/user/: create_user.py  get_all_users.py  get_user_by_email.py  get_user_by_id.py  get_user_by_name.py
app/schemas/: task.py  user.py
app/service/ping/: pingService.py
app/service/task/: create_task.py  create_task_with_user.py  delete_task.py  get_all_tasks.py  get_task.py  get_task_by_category.py  get_task_by_id.py  get_task_by_title.py  update_task.py
app/service/user/: login.py  register.py
